Bug 455988. Optimize MozAfterPaint so we never even dispatch an XPCOM event if there are no listeners. r=smaug,sr=mats